fix: demo layout issues

--- a/app/index.scss
+++ b/app/index.scss
@@ -15,6 +15,12 @@ body {
     background: map-get($color-demo, 2);
     font-family: Roboto;
     margin: 0;
+    position: relative;
+}
+
+.page {
+    // fix wrong offsets in bounding boxes
+    overflow: hidden;
 }
 
 h1, p, a {
